--- a/pagina-home.html
+++ b/pagina-home.html
@@ -8,20 +8,35 @@
     <link type="text/css" rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script  src="site.js"></script>
 </head>
 <body>
-    <nav class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-dark" data-bs-theme="dark">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <span class="fs-4">BPS-games</span>
-        </a>
+  <nav class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-dark" data-bs-theme="dark">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+       <span class="fs-4">BPS-games</span>
+      </a>
   
-        <ul class="nav nav-pills">
-          <li class="nav-item"><a href="pagina-home.html" class="nav-link active" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="pagina-sobre.html" class="nav-link">sobre</a></li>
-          <li class="nav-item"><a href="pagina-contato.html" class="nav-link">contato</a></li>
-        </ul>
-      </nav>
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="pagina-home.html" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="pagina-sobre.html" class="nav-link">sobre</a></li>
+        <li class="nav-item"><a href="pagina-contato.html" class="nav-link">contato</a></li>
+      </ul>
+  </nav>
       <main>
+        <div id="conteudo"></div>
+          <script>
+             const url = 'http://localhost:3000/produtos'
+             fetch(url)
+             .then(response => response.json())
+             .then(json => {
+             const div = document.getElementById("conteudo");
+             div.innerText = JSON.stringify(json)
+             })
+           </script>
+            <h2>Lista de produtos</h2>
+            <div class="produtos">
+              <div id="site"></div>
+            </div>
          <!-- http://localhost:3000/produtos -->
       </main>
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
