--- a/pagina-home.html
+++ b/pagina-home.html
@@ -23,6 +23,12 @@
       </ul>
   </nav>
       <main>
+        <div class="container p-4 p-md-5 mb-4 rounded text-bg-dark">
+          <div class="col-md-6 px-0">
+            <h1 class="display-4 fst-italic">Ache jogos e acessorios aqui!</h1>
+            <p class="lead my-3">os melhores preços estão aqui</p>
+          </div>
+        </div>
         <div id="conteudo"></div>
           <script>
              const url = 'http://localhost:3000/produtos'
@@ -34,9 +40,8 @@
              })
            </script>
             <h2>Lista de produtos</h2>
-            <div class="produtos">
-              <div id="site"></div>
-            </div>
+              <div class="site" id="site"></div>
+
          <!-- http://localhost:3000/produtos -->
       </main>
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
